ggplot2 0.9.0 ----------------------------------------------------------------

* `collide`, which powers `position_dodge` and `position_stack`, now does not
  error on single x values (Thanks to Brian Diggs for a fix. #157)

* `...` in `ggplot` now passed on to `fortify` method when used with an object
  other than a data frame

DOCUMENTATION

* ggplot2 has moved away from the two (!!) homegrown documentation systems
  that it previously relied on, and now uses roxygen extensively. The current
  downside is that this means that ggplot2 website can no longer be updated,
  but I hope work with the `helpr` package will resolve that shortly.

* ggplot2 now uses a `NAMESPACE`, and only exports functions that should be
  user visible - this should make it play considerably more nicely with other
  packages in the R ecosystem

SCALES

* scales have been rewritten to use the new `scales` package, which does a
  much better job at defining what a scale is and making it easier for you to
  create your own scales. Scales should now behave much more consistently, and
  it should be easier for me to add new features in the future.

* `breaks` parameter can now be a function, which will be passed the scale
  limits and expected to return a character vector of breaks

* `labels` parameter can now be a function - this replaces the previous
  formatter function that only some scales possessed, and the `major` argument
  to the data time scales. This function should take a vector of breaks as
  input, and return a character vector or list of expressions as output. See
  `comma_format`, `dollar_format`, `percent_format`, `scientific_format`,
  `parse_format` and `math_format` for examples

* transformations now provided by the scales package - see `?trans_new` for
  list of available transformations, and how to create your own. The
  transformations in this package should do a better job at computing default
  breaks.
